fix slash alignment in firefox
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@20791 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_content-nav.scss
+++ b/src/main/resources/scss/_content-nav.scss
@@ -23,6 +23,13 @@
 			text-transform: uppercase;
 		}
 
+		span:not(.part){
+			.x-gecko & {
+				top: -25px;
+				position: relative;
+			}
+		}
+
 		span.part {
 			display: inline-block;
 			max-width: 35%;
